--- a/calc/Base.lproj/Main.storyboard
+++ b/calc/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PPl-9h-p43">
-                                <rect key="frame" x="122.33333333333333" y="600" width="148.33333333333337" height="75"/>
+                                <rect key="frame" x="122.33333333333333" y="650" width="148.33333333333337" height="75"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="75" id="iKr-i9-ila"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="75" id="n8L-E8-b5l"/>
@@ -55,16 +55,30 @@
                                     <fontDescription key="titleFontDescription" name="Tahoma-Bold" family="Tahoma" pointSize="20"/>
                                 </buttonConfiguration>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="inputLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rrd-al-vMA">
+                                <rect key="frame" x="96.666666666666686" y="470" width="200" height="80"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="L1m-YF-NC6"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="Rtb-q2-biU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <constraints>
+                            <constraint firstItem="PPl-9h-p43" firstAttribute="top" secondItem="rrd-al-vMA" secondAttribute="bottom" constant="100" id="C5u-Sv-7MT"/>
                             <constraint firstItem="V2O-Qg-pQs" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="QmV-zX-cpj"/>
+                            <constraint firstItem="rrd-al-vMA" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="S1j-x2-aHt"/>
+                            <constraint firstItem="rrd-al-vMA" firstAttribute="top" secondItem="V2O-Qg-pQs" secondAttribute="bottom" constant="370" id="U1z-wF-xci"/>
                             <constraint firstItem="PPl-9h-p43" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="dDt-YC-Mf0"/>
-                            <constraint firstItem="PPl-9h-p43" firstAttribute="top" secondItem="V2O-Qg-pQs" secondAttribute="bottom" constant="500" id="q4z-hi-IQN"/>
                             <constraint firstItem="V2O-Qg-pQs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="9" id="qVw-3o-pFg"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="inputLabel" destination="rrd-al-vMA" id="n0k-tm-e2N"/>
                         <outlet property="mainLabel" destination="V2O-Qg-pQs" id="Arx-5k-Djl"/>
                         <outlet property="setOneButton" destination="PPl-9h-p43" id="CZa-WG-dKh"/>
                     </connections>
